fix margin in photo and .main

--- a/css/simple_materialize.css
+++ b/css/simple_materialize.css
@@ -2226,7 +2226,6 @@ body {
 }
 
 .section {
-  padding-top: 1rem;
   padding-bottom: 1rem;
 }
 
@@ -2955,7 +2954,7 @@ h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
 h1 {
   font-size: 4.2rem;
   line-height: 110%;
-  margin: 2.1rem 0 1.68rem 0;
+  margin: 2.1rem 0 0 0;
 }
 
 h2 {
